nullaway_error_E40FA6E3-04D4-4869-B3AD-037CFD8DB7D7.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jms/src/main/java/org/springframework/jms/connection/SingleConnectionFactory.java:341: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return this.connection;
			^
    (see http://t.uber.com/nullaway )
